Bug 377676 - Window resizes itself after failing to connect to ftp in new tab
Summary: Window resizes itself after failing to connect to ftp in new tab
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwidgetsaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-16 05:24 UTC by tguen
Modified: 2017-03-27 23:33 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tguen 2017-03-16 05:24:31 UTC
I have a bookmark that connects to an FTP server. I opened it in a new tab, then switched to that tab. It failed to connect to the server (unrelated issue) and displayed an error message, but also expanded the window vertically. This is always reproducible if the error message appears, but only if the link is opened in a new tab.

before: https://i.imgur.com/Lf8uvsG.png
after:  https://i.imgur.com/jLcm7pS.png
Comment 1 Kai Uwe Broulik 2017-03-17 15:00:49 UTC
Looks like a bug in KMessageWidget
Comment 2 Christoph Feck 2017-03-17 16:44:47 UTC
Does it also expand in the same way, if you try to visit /root as a normal user, or for any other error messages displayed inside the file area?
Comment 3 tguen 2017-03-17 22:27:51 UTC
Trying to open /root displays the error as expected, but trying to open /lost+found pushes the file list panel down 3x as far as it needs to display the error. 

https://i.imgur.com/h7wEL8t.png

This is likely why the window resized before, so it had enough room as it thought it needed to display the error. Again, this only happens when opening in a new tab.
Comment 4 Christoph Feck 2017-03-18 00:31:42 UTC
Okey, found how to reproduce. I had Breeze widget style animations disabled. When enabling them, I get the same issue now.
Comment 5 Christoph Feck 2017-03-27 23:33:24 UTC
Git commit 0cfb788c2e4445a66956fa1aae61a6e8df9281be by Christoph Feck.
Committed on 27/03/2017 at 23:31.
Pushed by cfeck into branch 'master'.

Fix wrong size hint when animatedShow is called with hidden parent

Differential Revision: https://phabricator.kde.org/D5092

M  +2    -1    src/kmessagewidget.cpp

https://commits.kde.org/kwidgetsaddons/0cfb788c2e4445a66956fa1aae61a6e8df9281be