Fix wrong size hint when animatedShow is called with hidden parent

BUG: 377676

Differential Revision: https://phabricator.kde.org/D5092